--- a/projects/auth/src/lib/components/auth/register/register.component.html
+++ b/projects/auth/src/lib/components/auth/register/register.component.html
@@ -1,9 +1,9 @@
-<div class="form-container sign-up absolute top-0 left-0 h-full w-1/2 opacity-0 z-[1] transition-all duration-500 ease-in-out">
-    <form class="bg-white flex items-center justify-center flex-col px-10 h-full">
-      <h1 class="text-2xl leading-4 tracking-wide my-5 font-bold">Create Account</h1>
-      <input class="bg-gray-200 border-none my-2 px-4 py-2 text-sm rounded-md w-full outline-none" type="text" placeholder="Name">
-      <input class="bg-gray-200 border-none my-2 px-4 py-2 text-sm rounded-md w-full outline-none" type="email" placeholder="Email">
-      <input class="bg-gray-200 border-none my-2 px-4 py-2 text-sm rounded-md w-full outline-none" type="password" placeholder="Password">
-      <button class="bg-indigo-800 text-white text-xs px-11 py-3 border border-transparent rounded-lg font-semibold tracking-tight uppercase mt-3 cursor-pointer">Sign Up</button>
+<div class="register-container sign-up">
+    <form class="register-form">
+        <div class="register-title">Create Account</div>
+        <input class="register-input" type="text" placeholder="Name">
+        <input class="register-input" type="email" placeholder="Email">
+        <input class="register-input" type="password" placeholder="Password">
+        <button class="register-button">Sign Up</button>
     </form>
-  </div>
+</div>
