--- a/projects/auth/src/lib/components/auth/toggle/login-template/login-template.component.html
+++ b/projects/auth/src/lib/components/auth/toggle/login-template/login-template.component.html
@@ -1,5 +1,8 @@
-<div class="login-template-container">
-    <div class="login-template-title">Welcome Back</div>
-    <p class="login-template-text">Enter your personal details to use all of the site features</p>
-    <button class="login-template-button" (click)="toggleTemplate()">Sign In</button>
+<div class="absolute top-0 right-0 w-1/2 h-full flex flex-col items-center justify-center px-8 text-center transition-transform duration-[600ms] ease-in-out">
+
+    <h1 class="text-2xl leading-4 tracking-wide my-5 font-bold">Welcome Back</h1>
+    <p class="text-sm mb-4">Enter your personal details to use all of the site features</p>
+    <button (click)="toggleTemplate()" class="bg-transparent border border-white text-white text-xs px-11 py-3 rounded-lg font-semibold uppercase mt-3 cursor-pointer">
+        Sign In
+    </button>
 </div>
