--- a/projects/auth/src/lib/components/auth/auth.component.css
+++ b/projects/auth/src/lib/components/auth/auth.component.css
@@ -23,6 +23,13 @@
     background-color: #fff;
 }
 
+
+@media (max-width: 800px) {
+    .container {
+        width: 400px;
+    }
+}
+
 .container.active .sign-in {
     transform: translateX(100%);
 }
