--- a/projects/auth/src/lib/components/auth/login/login.component.css
+++ b/projects/auth/src/lib/components/auth/login/login.component.css
@@ -9,6 +9,10 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 600ms;
 
+    @media (max-width: 800px) {
+        width: 100%;
+    }
+
     & .login-form {
         background-color: #fff;
         display: flex;
