--- a/projects/auth/src/lib/components/auth/register/register.component.css
+++ b/projects/auth/src/lib/components/auth/register/register.component.css
@@ -8,6 +8,13 @@
     z-index: 1;
     transition: all 0.6s ease-in-out;
 
+    @media (max-width: 800px) {
+        & {
+            width: 100%;
+        }
+    }
+
+
     & .register-form {
         display: flex;
         flex-direction: column;
