--- a/projects/auth/src/lib/components/auth/toggle/toggle.component.css
+++ b/projects/auth/src/lib/components/auth/toggle/toggle.component.css
@@ -3,19 +3,39 @@
     top: 0;
     width: 50%;
     height: 100%;
-    overflow: hidden;
     z-index: 10;
+    overflow: hidden;
     border-radius: 150px 0 0 100px;
     transition: all 0.6s ease-in-out;
+
+    @media (max-width: 800px) {
+        & {
+            z-index: -1000;
+        }
+    }
+
 
     &.login {
         left: 0;
         border-radius: 0 150px 100px 0;
+        z-index: 10;
     }
 
     &.not-login {
         left: 50%;
         border-radius: 150px 0 0 100px;
+    }
+
+    @media (max-width: 800px) {
+        &.not-login {
+            left: 0;
+            z-index: -1000;
+            width: 100%;
+        }
+
+        &.login {
+            width: 100%;
+        }
     }
 
     & .toggle-exchanger{
