--- a/projects/auth/src/lib/components/auth/auth.component.css
+++ b/projects/auth/src/lib/components/auth/auth.component.css
@@ -5,6 +5,13 @@
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to right, #fff, oklch(0.785 0.115 274.713));
+    /* background-image: linear-gradient(45deg, oklch(0.785 0.115 274.713) ,#fff); */
+
+
+    @media (max-width:450px) {
+        /* Making the gradient diagonal for better color contrast */
+        background-image: linear-gradient(45deg, oklch(0.785 0.115 274.713) ,#fff);
+    }
 }
 
 
@@ -28,6 +35,12 @@
     .container {
         width: 400px;
     }
+
+    @media (max-width: 450px) {
+        .container {
+            width: 350px;
+        }
+    }
 }
 
 .container.active .sign-in {
@@ -38,6 +51,6 @@
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
-    animation: move 0.6s ease-in-out;
+    /* animation: move 0.6s ease-in-out; */
 }
 
