feat: Added logic for changing between login and signup forms in small devices

--- a/projects/auth/src/lib/components/auth/auth.component.html
+++ b/projects/auth/src/lib/components/auth/auth.component.html
@@ -1,7 +1,9 @@
 <div class="main-container">
     <div class="container" [ngClass]="{'active': showTemplate() == 'login'}">
-        <login />
-        <register />
+            <login (showRegisterForm)="changeForm($event)" [invisible]="(showForm() == 'register')" />
+            <register (showLoginForm)="changeForm($event)" [invisible]="(showForm() == 'login')"/>
+
+        <!-- This component won't be needed if we're on smaller devices -->
         <toggle (changeToggle)="changeTemplate($event)" />
     </div>
 </div>
