--- a/projects/auth/src/lib/components/auth/login/login.component.css
+++ b/projects/auth/src/lib/components/auth/login/login.component.css
@@ -9,6 +9,11 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 600ms;
 
+    &.invisible {
+        opacity: 0%;
+        visibility: hidden;
+    }
+
     @media (max-width: 800px) {
         width: 100%;
     }
