--- a/projects/auth/src/lib/components/auth/register/register.component.html
+++ b/projects/auth/src/lib/components/auth/register/register.component.html
@@ -1,9 +1,12 @@
-<div class="register-container sign-up">
+<div class="register-container sign-up" [ngClass]="{'visible': !invisible()}">
     <form class="register-form">
         <div class="register-title">Create Account</div>
         <input class="register-input" type="text" placeholder="Name">
         <input class="register-input" type="email" placeholder="Email">
         <input class="register-input" type="password" placeholder="Password">
         <button class="register-button">Sign Up</button>
+        @if (isSmallDevice) {
+            <button style="margin-top: 20px;" (click)="changeToLoginForm($event)">Change to login</button>
+        }
     </form>
 </div>
