--- a/projects/auth/src/lib/components/auth/register/register.component.css
+++ b/projects/auth/src/lib/components/auth/register/register.component.css
@@ -68,5 +68,29 @@
             margin-top: 0.75rem;
             cursor: pointer;
         }
+
+        & .change-button {
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            flex-direction: column;
+            margin-top: 2rem;
+            width: 15rem;
+            gap: 0.2rem;
+            font-weight: 600;
+        }
+
+        & .change-button-text {
+            display: inline-block;
+            color: #372aac;
+            cursor: pointer;
+            user-select: none;
+        }
+
+        & .change-button-text:active {
+            /* transform: translateY(-2px); text rises a little bit */
+            outline: none;
+        }
+
     }
 }
