--- a/projects/auth/src/lib/components/auth/login/login.component.html
+++ b/projects/auth/src/lib/components/auth/login/login.component.html
@@ -5,7 +5,7 @@
       <input class="login-input" type="password" placeholder="Password">
       <button class="login-button">Sign In</button>
       @if (isSmallDevice) {
-          <div class="change-button" (click)="changeToSignUpForm($event)">Don’t have an account yet? <div class="change-button-text">Click here</div></div>
+          <div class="change-text">Don’t have an account yet? <button class="change-button" (click)="changeToSignUpForm($event)">Click here</button></div>
       }
     </form>
   </div>
