fix: fixed a grammar error on register component

--- a/projects/auth/src/lib/components/auth/register/register.component.html
+++ b/projects/auth/src/lib/components/auth/register/register.component.html
@@ -6,7 +6,7 @@
         <input class="register-input" type="password" placeholder="Password">
         <button class="register-button">Sign Up</button>
         @if (isSmallDevice) {
-            <div class="change-text">Alredy have an account? <button class="change-button" (click)="changeToLoginForm($event)">Click here</button></div>
+            <div class="change-text">Already have an account? <button class="change-button" (click)="changeToLoginForm($event)">Click here</button></div>
         }
     </form>
 </div>
