--- a/projects/auth/src/lib/components/auth/register/register.component.css
+++ b/projects/auth/src/lib/components/auth/register/register.component.css
@@ -29,7 +29,7 @@
         align-items: center;
         justify-content: center;
         padding-inline: 2.5rem;
-        background-color: #ffffff;
+        background-color: var(--secondary-color);
 
         & .register-title {
             font-size: 1.5rem;
@@ -40,7 +40,7 @@
         }
 
         & .register-input {
-            background-color: #e5e7eb;
+            background-color: var(--input-color);
             border-style: none;
             margin-block: 0.5rem;
             padding-inline: 1rem;
@@ -53,8 +53,8 @@
         }
 
         & .register-button {
-            background-color: #372aac;
-            color: #ffffff;
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
             font-size: 0.75rem;
             line-height: 1.3;
             padding-inline: 2.75rem;
@@ -83,12 +83,12 @@
 
         & .change-button {
             display: inline-block;
-            color: #372aac;
+            color: var(--primary-color);
             cursor: pointer;
             user-select: none;
             font-weight: 600;
             font-size: 1rem;
-            background-color: #ffffff;
+            background-color: var(--secondary-color);
         }
 
         & .change-button:active {
