--- a/projects/auth/src/lib/components/auth/toggle/login-template/login-template.component.css
+++ b/projects/auth/src/lib/components/auth/toggle/login-template/login-template.component.css
@@ -28,8 +28,8 @@
 
     & .login-template-button {
         background-color: transparent;
-        border: #ffffff 1px solid;
-        color: #ffffff;
+        border: var(--secondary-color) 1px solid;
+        color: var(--secondary-color);
         font-size: 0.75rem;
         line-height: 1.3;
         padding-inline: 2.75rem;
