--- a/projects/auth/src/lib/components/auth/toggle/toggle.component.css
+++ b/projects/auth/src/lib/components/auth/toggle/toggle.component.css
@@ -38,8 +38,8 @@
     }
 
     & .toggle-exchanger{
-        background: linear-gradient(to right, #818cf8, #3730a3);
-        color: #ffffff;
+        background: linear-gradient(to right, color-mix(in srgb, var(--primary-color), white 45%), var(--primary-color));
+        color: var(--secondary-color);
         position: absolute;
         left: -100%;
         height: 100%;
