style: small changes in register and login buttons + whiter bg in toggle linear-gradient

--- a/projects/auth/src/lib/components/auth/register/register.component.css
+++ b/projects/auth/src/lib/components/auth/register/register.component.css
@@ -89,6 +89,8 @@
             font-weight: 600;
             font-size: 1rem;
             background-color: var(--secondary-color);
+            border: none;
+            text-decoration: underline;
         }
 
         & .change-button:active {
