feat: Can send info to the backend stablishing an apiUrl in the provider

--- a/projects/auth/src/lib/components/auth/subcomponents/login/login.component.html
+++ b/projects/auth/src/lib/components/auth/subcomponents/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-container sign-in" [ngClass]="{'invisible': invisible()}">
-    <form class="login-form">
+    <form class="login-form" (submit)="login()">
       <div class="login-header">Sign In</div>
-      <input class="login-input" type="email" placeholder="Email">
-      <input class="login-input" type="password" placeholder="Password">
+      <input class="login-input" type="email" name="email" [(ngModel)]="userInfo.email" placeholder="Email">
+      <input class="login-input" type="password" name="password" [(ngModel)]="userInfo.password" placeholder="Password">
       <button class="login-button">Sign In</button>
       @if (isSmallDevice) {
-          <div class="change-text">Don’t have an account yet? <button class="change-button" (click)="changeToSignUpForm($event)">Click here</button></div>
+          <div class="change-text">Don’t have an account yet? <button type="submit" class="change-button" (click)="changeToSignUpForm($event)">Click here</button></div>
       }
     </form>
   </div>
