--- a/projects/auth/src/lib/components/auth/subcomponents/login/login.component.html
+++ b/projects/auth/src/lib/components/auth/subcomponents/login/login.component.html
@@ -4,7 +4,7 @@
       <input class="login-input" type="email" name="email" [(ngModel)]="userInfo.email" placeholder="Email">
       <input class="login-input" type="password" name="password" [(ngModel)]="userInfo.password" placeholder="Password">
       <button class="login-button">Sign In</button>
-      @if (isSmallDevice) {
+      @if (isSmallDevice()) {
           <div class="change-text">Don’t have an account yet? <button type="submit" class="change-button" (click)="changeToSignUpForm($event)">Click here</button></div>
       }
     </form>
