fix: Now you can't get stuck in the sign up form

--- a/projects/auth/src/lib/components/auth/auth.component.html
+++ b/projects/auth/src/lib/components/auth/auth.component.html
@@ -1,9 +1,13 @@
 <div class="main-container">
     <div class="container" [ngClass]="{'active': showTemplate() == 'login'}">
-            <login (showRegisterForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()" [invisible]="(showForm() == 'register')" />
-            <register (showLoginForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()" [invisible]="(showForm() == 'login')"/>
+        <login (showRegisterForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()"
+            [invisible]="(showForm() == 'register')" />
+        <register (showLoginForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()"
+            [invisible]="(showForm() == 'login')" />
 
         <!-- This component won't be needed if we're on smaller devices -->
-        <toggle (changeToggle)="changeTemplate($event)" />
+        @if (!isSmallDevice()) {
+            <toggle (changeToggle)="changeTemplate($event)" />
+        }
     </div>
 </div>
