feat: starting with the loginform validation

--- a/projects/auth/src/lib/components/auth/subcomponents/login/login.component.css
+++ b/projects/auth/src/lib/components/auth/subcomponents/login/login.component.css
@@ -65,6 +65,10 @@
             cursor: pointer;
         }
 
+        & .disabled {
+            background-color: color-mix(in srgb, var(--primary-color), #fff 40%);
+        }
+
         & .change-text {
             display: flex;
             align-items: center;
