feat(style): Giving color feedback for the inputs in the login form

--- a/projects/auth/src/lib/components/auth/auth.component.css
+++ b/projects/auth/src/lib/components/auth/auth.component.css
@@ -60,3 +60,12 @@
     /* animation: move 0.6s ease-in-out; */
 }
 
+/* Styles for the forms  */
+.invalid-input {
+    border: 2px solid #f55 !important;
+}
+
+.valid-input {
+    border: 2px solid #080 !important;
+}
+/* End styles for the forms */
