style: small changes in the sign in button when disabled

--- a/projects/auth/src/lib/components/auth/subcomponents/login/login.component.css
+++ b/projects/auth/src/lib/components/auth/subcomponents/login/login.component.css
@@ -67,6 +67,7 @@
 
         & .disabled {
             background-color: color-mix(in srgb, var(--primary-color), #fff 40%);
+            cursor: default;
         }
 
         & .change-text {
