feat(style): Now added the form validation to the sign up form + form reset after sending

--- a/projects/auth/src/lib/components/auth/subcomponents/register/register.component.css
+++ b/projects/auth/src/lib/components/auth/subcomponents/register/register.component.css
@@ -81,6 +81,11 @@
             font-weight: 600;
         }
 
+        & .disabled {
+            background-color: color-mix(in srgb, var(--primary-color), #fff 40%);
+            cursor: default;
+        }
+
         & .change-button {
             display: inline-block;
             color: var(--primary-color);
