feat: register form emit a ouput of validation that is catch on auth and shown in html

--- a/projects/auth/src/lib/components/auth/auth.component.css
+++ b/projects/auth/src/lib/components/auth/auth.component.css
@@ -90,3 +90,11 @@
 /* End styles for the forms */
 
 
+.feedback-notification {
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    transform: translateY(100%);
+    z-index: 1000;
+}
