--- a/projects/auth/src/lib/components/auth/auth.component.html
+++ b/projects/auth/src/lib/components/auth/auth.component.html
@@ -1,13 +1,14 @@
 <div class="main-container">
     <div class="container" [ngClass]="{'active': showTemplate() == 'login'}">
-        <login (feedbackChange)="changeFeedbackMessage($event)" (showRegisterForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()"
-            [invisible]="(showForm() == 'register')" />
-        <register (feedbackChange)="changeFeedbackMessage($event)" (showLoginForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()"
+        <login (feedbackChange)="changeFeedbackMessage($event)" (showRegisterForm)="changeForm($event)"
+            [isSmallDevice]="isSmallDevice()" [invisible]="(showForm() == 'register')" />
+        <register (showTemplate)="changeTemplate($event)" (feedbackChange)="changeFeedbackMessage($event)"
+            (showLoginForm)="changeForm($event)" [isSmallDevice]="isSmallDevice()"
             [invisible]="(showForm() == 'login')" />
 
         <!-- This component won't be needed if we're on smaller devices -->
         @if (!isSmallDevice()) {
-            <toggle (changeToggle)="changeTemplate($event)" />
+        <toggle [actualTemplate]="showTemplate()" (changeToggle)="changeTemplate($event)" />
         }
     </div>
     <!-- @if (feedbackMessage().message) {
