--- a/projects/app/src/app/components/auth-implementation/auth-implementation.component.html
+++ b/projects/app/src/app/components/auth-implementation/auth-implementation.component.html
@@ -1,1 +1,3 @@
-<app-auth [theme]="'classicB&W'"></app-auth>
+<div class="main-container">
+    <app-auth [theme]="'classicB&W'"></app-auth>
+</div>
